kitsune/sumo/static/sumo/scss/components/_wiki.scss
@use '../config' as c;
@use 'protocol/css/includes/lib' as p;


// Hide the related documents list on edit metadata and new document pages
body.edit_metadata #related-docs-list,
body.new #related-docs-list {
  display: none !important;
}

figure {
  &.linked-in-product {
    display: flex;
    margin-bottom: p.$spacing-xl;

    img {
      width: 24px;
      height: 24px;
      margin-right: p.$spacing-sm;
    }

    figcaption {
      font-weight: bold;
      line-height: normal;
    }
  }
}

#id_restrict_to_groups {
  // Prevents flickering by hiding the un-selectized select
  // until tom-select uses it to make a new one that's visible.
  display: none;
}

// These styles were pulled directly from the less files.

article {
  &.locked>* {
    opacity: 0.3;
  }

  >* {
    transition: opacity 1s;
  }
}

#edit-document label {
  font-weight: bold;
}

.sidebar-nav {
  &.topics {
    background-color: #fff;
    // margin-top: p.$spacing-md;

    >li {
      background-color: #fff;

      &.selected {

        >a,
        >a:visited {
          background: #f3f3f3;
          border: none;
          border-left: p.$spacing-xs solid #000;
          color: #000;
          font-weight: bold;

          &:before {
            content: none;
          }

          &:hover {
            color: #000;
          }
        }

        &.has-subtopics {
          >a {
            background: #fff;
          }
        }
      }

      >a,
      >a:visited,
      {
      color: #000;
      background: #fff;
      border: none;
      border-left: p.$spacing-xs solid #e7e7e7;
      text-transform: none;

      &:before {
        content: none;
      }

      &:hover {
        color: var(--color-link);
      }
    }

    &.subtopic-selected {

      >a,
      >a:visited {
        background: #fff;
        border-left: p.$spacing-xs solid #000;
      }
    }

    >ul {
      list-style: none;
      margin: 0;
      padding: 0;
      text-transform: none;

      >li {

        >a,
        >a:visited {
          background: #f3f3f3;
          border-left: none;
          color: #000;
          display: block;
          padding: 12px 20px;
          text-decoration: none;

          &:hover {
            color: var(--color-link);
          }
        }

        &.selected {

          >a,
          >a:visited {
            border-left: p.$spacing-xs solid #000;
            font-weight: bold;

            &:hover {
              color: #000;
            }
          }
        }
      }
    }
  }

  .html-rtl &.topics>li {
    &.selected {

      >a,
      >a:visited {
        border-left: none;
        border-right: p.$spacing-xs solid #000;
      }
    }

    >a,
    >a:visited,
    {
    border-left: none;
    border-right: p.$spacing-xs solid #e7e7e7;
  }

  &.subtopic-selected {

    >a,
    >a:visited {
      border-left: none;
      border-right: p.$spacing-xs solid #000;
    }
  }
}
}

&.related-products {
  >li {
    >a {
      >span {
        box-sizing: border-box;
        display: block;
        min-height: p.$spacing-lg;
        padding-left: 34px;
        padding-top: 3px;
        position: relative;

        img {
          background-repeat: no-repeat;
          background-size: cover;
          height: p.$spacing-lg;
          left: 0;
          margin-top: -12px;
          position: absolute;
          top: 50%;
          width: p.$spacing-lg;
        }
      }
    }
  }
}
}

#os_input,
#browser_input {
  cursor: pointer;
  padding: 0 10px;
  width: 120px !important;
  // background: #fff @iconsSprite 60px -280px no-repeat;
}

.wait {
  display: none;
}

.wiki-doc {
  #doc-contributors {
    display: block;
    min-height: 100px;
    padding: 30px 0 10px 0;

    .help-title-prefix {
      color: #000;
      float: left;
      font-size: p.$spacing-lg;
      padding-left: 5px;
    }

    .help-title {
      color: #000;
      float: left;
      font-size: p.$spacing-lg;
      padding-left: 15px;
      width: 32%;
    }

    .contributors {
      float: right;
      padding-left: 40px;
      width: 54%;
    }

    .help-link {
      color: #000;
      float: right;
      padding-top: 10px;
    }

    a.user,
    a.user:visited,
    a.user:hover {
      color: #eee;
    }
  }

  .separator {
    width: 100%;
    height: 2px;
    background: #000;
  }
}


/* Document Translation page */
#localize-document {
  .buttons-and-preview {

    /* Taken from Bootstrap V3 */
    .alert {
      background: #FFE url("../img/warning-stripes.png") repeat-x scroll left top;
      border: 1px solid transparent;
      border-radius: p.$spacing-xs;
      padding: 15px;
      margin-bottom: 20px;
    }

    .error {
      background-color: #f2dede;
      border-color: #ebccd1;
      color: #a94442;
    }

    .info {
      background-color: #fcf8e3;
      border-color: #faf2cc;
      color: #8a6d3b;
    }

    .success {
      background-color: #dff0d8;
      border-color: #d6e9c6;
      color: #3c763d;
    }
  }
}
/* ... */

